fixed : scrollbar

--- a/public/style/meeting/overview.css
+++ b/public/style/meeting/overview.css
@@ -19,9 +19,11 @@ a {
 }
 
 #meeting_list {
-  height: 85vh;
+  height: 90vh;
   overflow-y: scroll;
   padding: 0 5px;
+  scroll-behavior: smooth;
+  overscroll-behavior: contain;
 }
 
 #meeting_list .card {
@@ -88,6 +90,10 @@ a {
   padding: 3%;
   display: flex;
   flex-direction: column;
+  overflow-y: scroll;
+  height: 90vh;
+  scroll-behavior: smooth;
+  overscroll-behavior: contain;
 }
 
 #meeting_viewer .title {
